<resources>
    <string name="app_name">App_RadioButton</string>
    <string name="txt_num1_string">Dame el primer valor</string>
    <string name="txt_num2_string">Dame el segundo valor</string>
    <string name="rdb_sumar_string">SUMAR</string>
    <string name="rdb_restar_string">RESTAR</string>
    <string name="btn_calcular_string">CALCULAR</string>
    <string name="txt_resultado_string">Resultado</string>
</resources>